SPRING-10: Book library application (Spring ORM + JPA). Fixes 3.